@@ -8,6 +8,10 @@ Version 1.5.1 (??/??/2007)
     to stop validating.
   * LWB: Enhanced the editor so that it shows a broken icon if I cannot find the icon specified
     (useful for transferring specs between machines with different icon sets plugged in).
+  * LWB: Fixed a bug where frame order was not being preserved between an "Iconify all" 
+    action and a "Show all" action for the nets of a specfication.
+  * LWB: The editor is now closer to (but not perfectly) rebuilding the state of the net 
+    frames on a load, as per how the workflow designer left the state on a save.
 
 Version 1.5 (27/07/2007) 
   * LWB: Atomic tasks have been enhanced so that an icon can be embedded within the task
